Instrument modeling mostly works

--- a/examples/StokesIImaging/Project.toml
+++ b/examples/StokesIImaging/Project.toml
@@ -6,6 +6,7 @@ ComradeOptimization = "26988f03-70df-4135-959e-06268cc6415a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DistributionsAD = "ced4e74d-a319-5a8a-b0ac-84af2272839c"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
+FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MCMCDiagnosticTools = "be115224-59cd-429b-ad48-344e309966f0"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
@@ -21,7 +22,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 CairoMakie = "0.11"
-Comrade = "0.9"
+Comrade = "0.10"
 ComradeAHMC = "0.5"
 ComradeOptimization = "0.1"
 Distributions = "0.25"
@@ -31,4 +32,4 @@ Pkg = "1"
 Plots = "1"
 Pyehtim = "0.1"
 StableRNGs = "1"
-VLBIImagePriors = "0.7"
+VLBIImagePriors = "0.8"
