--- a/lib/ComradeAHMC/Project.toml
+++ b/lib/ComradeAHMC/Project.toml
@@ -25,7 +25,7 @@ Accessors = "0.1"
 AbstractMCMC = "4,5"
 AdvancedHMC = "0.5, 0.6"
 ArgCheck = "2"
-Comrade = "^0.9.3"
+Comrade = "0.10"
 DocStringExtensions = "0.8, 0.9"
 JLD2 = "0.4"
 LogDensityProblems = "2"
