--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Paul Tiede <ptiede91@gmail.com>"]
 version = "0.10.0"
 
 [deps]
+ADTypes = "47edcb42-4c32-4615-8424-f2b9edc5f35b"
 AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
 Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
 ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
