--- a/lib/ComradeDynesty/Project.toml
+++ b/lib/ComradeDynesty/Project.toml
@@ -12,7 +12,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
 AbstractMCMC = "4, 5"
-Comrade = "^0.9.3"
+Comrade = "0.10"
 Dynesty = "0.3"
 Random = "1.8"
 Reexport = "1"
