Remake all libs into extensions

--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ HypercubeTransform = "9ec9aee3-0fd3-44c2-8e61-a50acc66f3c8"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LogDensityProblems = "6fdf6af0-433a-55f7-b3ed-c6c6e0b8df7c"
+LogDensityProblemsAD = "996a588d-648d-4e1f-a8f0-a84b347e47b1"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
 ParameterHandling = "2412ca09-6db7-441c-8e3a-88d5709968c5"
@@ -31,6 +32,7 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArraysCore = "1e83bf80-4336-4d27-bf5d-d5a4f845583c"
@@ -44,17 +46,24 @@ VLBILikelihoods = "90db92cd-0007-4c0a-8e51-dbf0782ce592"
 VLBISkyModels = "d6343c73-7174-4e0f-bb64-562643efbeca"
 
 [weakdeps]
+AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
+Dynesty = "eb527566-0f3e-4aab-bb5f-9d2e403dba70"
+NestedSamplers = "41ceaf6f-1696-4a54-9b49-2e7a9ec3782e"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 Pigeons = "0eb8d820-af6a-4919-95ae-11206f830c31"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 
 [extensions]
+ComradeAdvancedHMCExt = "AdvancedHMC"
+ComradeDynestyExt = "Dynesty"
+ComradeNestedExt = "NestedSamplers"
 ComradeOptimizationExt = "Optimization"
 ComradePigeonsExt = "Pigeons"
 ComradePyehtimExt = "Pyehtim"
 
 [compat]
 AbstractMCMC = "3, 4, 5"
+AdvancedHMC = "0.6"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
 ChainRulesCore = "1"
@@ -64,13 +73,16 @@ DensityInterface = "0.4"
 DimensionalData = "0.26, 0.27"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
+Dynesty = "0.4"
 Enzyme = "0.11, 0.12"
 FillArrays = "0.12, 0.13, 1"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.4"
+LogDensityProblemsAD = "1"
 LogDensityProblems = "2"
 Makie = "0.20"
 NamedTupleTools = "0.13,0.14"
+NestedSamplers = "0.8"
 Optimization = "3"
 PaddedViews = "0.5"
 ParameterHandling = "0.4, 0.5"
@@ -92,12 +104,15 @@ VLBISkyModels = "0.5"
 julia = "1.9"
 
 [extras]
+AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
+Dynesty = "eb527566-0f3e-4aab-bb5f-9d2e403dba70"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+NestedSamplers = "41ceaf6f-1696-4a54-9b49-2e7a9ec3782e"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 Pigeons = "0eb8d820-af6a-4919-95ae-11206f830c31"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Makie", "Optimization", "Pigeons", "Pyehtim"]
+test = ["Test", "AdvancedHMC", "Dynesty", "Makie", "NestedSamplers", "Optimization", "Pigeons", "Pyehtim"]
