--- a/examples/ClosureImaging/Project.toml
+++ b/examples/ClosureImaging/Project.toml
@@ -1,12 +1,11 @@
 [deps]
+AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
-ComradeAHMC = "a4336a5c-78bc-4363-8a90-ce3fa9d3abe4"
-ComradeOptimization = "26988f03-70df-4135-959e-06268cc6415a"
 DisplayAs = "0b91fe84-8a4c-11e9-3e1d-67c38462b6d6"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DistributionsAD = "ced4e74d-a319-5a8a-b0ac-84af2272839c"
-LogDensityProblemsAD = "996a588d-648d-4e1f-a8f0-a84b347e47b1"
+Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -20,12 +19,9 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 [compat]
 CairoMakie = "0.11"
 Comrade = "0.10"
-ComradeAHMC = "0.5"
-ComradeOptimization = "0.1"
 DisplayAs = "0.1"
 Distributions = "0.25"
 DistributionsAD = "0.6"
-LogDensityProblemsAD = "1"
 OptimizationOptimJL = "0.2"
 Pkg = "1"
 Plots = "1"
