--- a/examples/HybridImaging/Project.toml
+++ b/examples/HybridImaging/Project.toml
@@ -1,28 +1,25 @@
 [deps]
+AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
-ComradeAHMC = "a4336a5c-78bc-4363-8a90-ce3fa9d3abe4"
-ComradeOptimization = "26988f03-70df-4135-959e-06268cc6415a"
 DisplayAs = "0b91fe84-8a4c-11e9-3e1d-67c38462b6d6"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DistributionsAD = "ced4e74d-a319-5a8a-b0ac-84af2272839c"
+Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
-VLBISkyModels = "d6343c73-7174-4e0f-bb64-562643efbeca"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 CairoMakie = "0.11"
 Comrade = "0.10"
-ComradeAHMC = "0.5"
-ComradeOptimization = "0.1"
 Distributions = "0.25"
 DistributionsAD = "0.6"
-OptimizationOptimJL = "0.1"
+OptimizationOptimJL = "0.2"
 Plots = "1"
 Pyehtim = "0.1"
 StableRNGs = "1"
