Add more test coverage

--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -35,7 +35,7 @@ jobs:
           version: '1'
       - uses: julia-actions/cache@v2
       - name: Install docs dependencies
-        run: julia --project=docs -e 'using Pkg; Pkg.develop([PackageSpec(path=pwd()), PackageSpec(url="https://github.com/ptiede/ComradeBase.jl"), PackageSpec(path=joinpath(pwd(), "lib/ComradeAHMC")), PackageSpec(path=joinpath(pwd(), "lib/ComradeOptimization")), PackageSpec(path=joinpath(pwd(), "lib/ComradeDynesty")), PackageSpec(path=joinpath(pwd(), "lib/ComradeNested")), PackageSpec(path=joinpath(pwd(), "lib/ComradeAdaptMCMC"))]); Pkg.instantiate()'
+        run: julia --project=docs -e 'using Pkg; Pkg.develop([PackageSpec(path=pwd()), PackageSpec(url="https://github.com/ptiede/ComradeBase.jl")]); Pkg.instantiate()'
       - name: Build Tutorials
         run: julia --project=docs -e 'include(joinpath(pwd(), "docs", "tutorials.jl"))'
       - name: Build and deploy
