--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,6 @@ jobs:
       matrix:
         group:
           - Core 
-          - ComradeAdaptMCMC
-          - ComradeAHMC
-          - ComradeDynesty
-          - ComradeOptimization
-          - ComradeNested
         version:
           - '1.9'
           - '1'
@@ -68,7 +63,7 @@ jobs:
           GROUP: ${{ matrix.group }}
       - uses: julia-actions/julia-processcoverage@v1
         with:
-          directories: src,lib/ComradeOptimization/src,lib/ComradeAHMC/src,lib/ComradeDynesty/src,lib/ComradeNested/src,lib/ComradeAdaptMCMC/src
+          directories: src
       - uses: codecov/codecov-action@v4
         with:
               token: ${{ secrets.CODECOV_TOKEN }}
