aAdd version bounds

--- a/Project.toml
+++ b/Project.toml
@@ -62,6 +62,7 @@ ComradePigeonsExt = "Pigeons"
 ComradePyehtimExt = "Pyehtim"
 
 [compat]
+Accessors = "0.1"
 AbstractMCMC = "3, 4, 5"
 AdvancedHMC = "0.6"
 ArgCheck = "2"
@@ -78,6 +79,7 @@ Enzyme = "0.11, 0.12"
 FillArrays = "0.12, 0.13, 1"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.4"
+IntervalSets = "0.6, 0.7"
 LogDensityProblemsAD = "1"
 LogDensityProblems = "2"
 Makie = "0.20"
@@ -99,6 +101,7 @@ StatsBase = "0.31,0.32,0.33, 0.34"
 StructArrays = "0.3,0.4,0.5,0.6"
 Tables = "1"
 TransformVariables = "0.8"
+VLBIImagePriors = "0.8"
 VLBILikelihoods = "^0.2.1"
 VLBISkyModels = "0.5"
 julia = "1.9"
