--- a/lib/ComradeDynesty/Project.toml
+++ b/lib/ComradeDynesty/Project.toml
@@ -13,7 +13,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 [compat]
 AbstractMCMC = "4, 5"
 Comrade = "0.10"
-Dynesty = "0.3"
+Dynesty = "0.3, 0.4"
 Random = "1.8"
 Reexport = "1"
 julia = "1.8"
