--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -37,7 +37,7 @@ jobs:
       - name: "Run CompatHelper"
         run: |
           import CompatHelper
-          CompatHelper.main(subdirs = ["", "lib/ComradeAdaptMCMC", "lib/ComradeAHMC", "lib/ComradeDynesty", "lib/ComradeOptimization", "lib/ComradeNested"])        
+          CompatHelper.main(subdirs = [""])        
         shell: julia --color=yes {0}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
