--- a/Project.toml
+++ b/Project.toml
@@ -82,7 +82,7 @@ HypercubeTransform = "0.4"
 IntervalSets = "0.6, 0.7"
 LogDensityProblemsAD = "1"
 LogDensityProblems = "2"
-Makie = "0.20"
+Makie = "0.20,  0.21"
 NamedTupleTools = "0.13,0.14"
 NestedSamplers = "0.8"
 Optimization = "3"
