--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -7,6 +7,14 @@ on:
     tags: '*'
   pull_request:
   
+  workflow_dispatch:
+
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+  statuses: write
+
   
 concurrency:
   # Skip intermediate builds: always.
@@ -38,8 +46,11 @@ jobs:
         run: julia --project=docs -e 'using Pkg; Pkg.develop([PackageSpec(path=pwd()), PackageSpec(url="https://github.com/ptiede/ComradeBase.jl")]); Pkg.instantiate()'
       - name: Build Tutorials
         run: julia --project=docs -e 'include(joinpath(pwd(), "docs", "tutorials.jl"))'
-      - name: Build and deploy
+      - name: Build and deploy docs
+        uses: julia-actions/julia-docdeploy@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # For authentication with GitHub Actions token
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }} # For authentication with SSH deploy key
-        run: julia --project=docs/ docs/make.jl
+          GKSwstype: "100" # for Plots.jl plots (if you have them)
+          JULIA_DEBUG: "Documenter"
+          DATADEPS_ALWAYS_ACCEPT: true
