--- a/examples/beginner/GeometricModeling/Project.toml
+++ b/examples/beginner/GeometricModeling/Project.toml
@@ -13,7 +13,7 @@ StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
 
 [compat]
-CairoMakie = "0.11, 0.12"
+CairoMakie = "0.12"
 Comrade = "0.10"
 Distributions = "0.25"
 OptimizationBBO = "0.2"
