--- a/Project.toml
+++ b/Project.toml
@@ -103,7 +103,7 @@ Tables = "1"
 TransformVariables = "0.8"
 VLBIImagePriors = "0.8"
 VLBILikelihoods = "^0.2.1"
-VLBISkyModels = "0.5"
+VLBISkyModels = "^0.5.5"
 julia = "1.9"
 
 [extras]
