--- a/examples/beginner/LoadingData/Project.toml
+++ b/examples/beginner/LoadingData/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
+DisplayAs = "0b91fe84-8a4c-11e9-3e1d-67c38462b6d6"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 
