--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LogDensityProblems = "6fdf6af0-433a-55f7-b3ed-c6c6e0b8df7c"
 LogDensityProblemsAD = "996a588d-648d-4e1f-a8f0-a84b347e47b1"
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
 ParameterHandling = "2412ca09-6db7-441c-8e3a-88d5709968c5"
@@ -62,8 +63,8 @@ ComradePigeonsExt = "Pigeons"
 ComradePyehtimExt = "Pyehtim"
 
 [compat]
-Accessors = "0.1"
 AbstractMCMC = "3, 4, 5"
+Accessors = "0.1"
 AdvancedHMC = "0.6"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
@@ -80,8 +81,8 @@ FillArrays = "0.12, 0.13, 1"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.4"
 IntervalSets = "0.6, 0.7"
-LogDensityProblemsAD = "1"
 LogDensityProblems = "2"
+LogDensityProblemsAD = "1"
 Makie = "0.21"
 NamedTupleTools = "0.13,0.14"
 NestedSamplers = "0.8"
