--- a/Project.toml
+++ b/Project.toml
@@ -62,13 +62,13 @@ ComradePigeonsExt = "Pigeons"
 ComradePyehtimExt = "Pyehtim"
 
 [compat]
-Accessors = "0.1"
 AbstractMCMC = "3, 4, 5"
+Accessors = "0.1"
 AdvancedHMC = "0.6"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
 ChainRulesCore = "1"
-ComradeBase = "0.7"
+ComradeBase = "0.7, 0.8"
 DelimitedFiles = "1"
 DensityInterface = "0.4"
 DimensionalData = "0.26, 0.27"
@@ -80,8 +80,8 @@ FillArrays = "0.12, 0.13, 1"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.4"
 IntervalSets = "0.6, 0.7"
-LogDensityProblemsAD = "1"
 LogDensityProblems = "2"
+LogDensityProblemsAD = "1"
 Makie = "0.21"
 NamedTupleTools = "0.13,0.14"
 NestedSamplers = "0.8"
