Update to work with new ComradeBase & VLBISkyModels

--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Comrade"
 uuid = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 authors = ["Paul Tiede <ptiede91@gmail.com>"]
-version = "0.10.4"
+version = "0.11.0"
 
 [deps]
 AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
@@ -68,7 +68,7 @@ AdvancedHMC = "0.6"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
 ChainRulesCore = "1"
-ComradeBase = "0.7"
+ComradeBase = "0.8"
 DelimitedFiles = "1"
 DensityInterface = "0.4"
 DimensionalData = "0.26, 0.27"
@@ -103,7 +103,7 @@ Tables = "1"
 TransformVariables = "0.8"
 VLBIImagePriors = "0.8"
 VLBILikelihoods = "^0.2.1"
-VLBISkyModels = "^0.5.5"
+VLBISkyModels = "0.6"
 julia = "1.9"
 
 [extras]
