CompatHelper: bump compat for VLBISkyModels to 0.6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -62,8 +62,8 @@ ComradePigeonsExt = "Pigeons"
 ComradePyehtimExt = "Pyehtim"
 
 [compat]
-Accessors = "0.1"
 AbstractMCMC = "3, 4, 5"
+Accessors = "0.1"
 AdvancedHMC = "0.6"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
@@ -80,8 +80,8 @@ FillArrays = "0.12, 0.13, 1"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.4"
 IntervalSets = "0.6, 0.7"
-LogDensityProblemsAD = "1"
 LogDensityProblems = "2"
+LogDensityProblemsAD = "1"
 Makie = "0.21"
 NamedTupleTools = "0.13,0.14"
 NestedSamplers = "0.8"
@@ -103,7 +103,7 @@ Tables = "1"
 TransformVariables = "0.8"
 VLBIImagePriors = "0.8"
 VLBILikelihoods = "^0.2.1"
-VLBISkyModels = "^0.5.5"
+VLBISkyModels = "^0.5.5, 0.6"
 julia = "1.9"
 
 [extras]
