Remove Enzyme Dep and make it an extension

--- a/test/Project.toml
+++ b/test/Project.toml
@@ -6,6 +6,7 @@ DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Dynesty = "eb527566-0f3e-4aab-bb5f-9d2e403dba70"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
+EnzymeTestUtils = "12d8515a-0907-448a-8884-5fe00fdf1c5a"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
