--- a/Project.toml
+++ b/Project.toml
@@ -73,7 +73,7 @@ ChainRulesCore = "1"
 ComradeBase = "0.8"
 DelimitedFiles = "1"
 DensityInterface = "0.4"
-DimensionalData = "0.27"
+DimensionalData = "0.27, 0.28"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
 Dynesty = "0.4"
