--- a/Project.toml
+++ b/Project.toml
@@ -62,8 +62,8 @@ ComradePigeonsExt = "Pigeons"
 ComradePyehtimExt = "Pyehtim"
 
 [compat]
-Accessors = "0.1"
 AbstractMCMC = "3, 4, 5"
+Accessors = "0.1"
 AdvancedHMC = "0.6"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
@@ -80,12 +80,12 @@ FillArrays = "0.12, 0.13, 1"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.4"
 IntervalSets = "0.6, 0.7"
-LogDensityProblemsAD = "1"
 LogDensityProblems = "2"
+LogDensityProblemsAD = "1"
 Makie = "0.21"
 NamedTupleTools = "0.13,0.14"
 NestedSamplers = "0.8"
-Optimization = "3"
+Optimization = "3, 4"
 PaddedViews = "0.5"
 ParameterHandling = "0.4, 0.5"
 Pigeons = "0.3, 0.4"
