--- a/Project.toml
+++ b/Project.toml
@@ -77,7 +77,7 @@ DimensionalData = "0.27, 0.28"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
 Dynesty = "0.4"
-Enzyme = "0.12, 0.13"
+Enzyme = "0.12"
 EnzymeCore = "0.7"
 FillArrays = "1"
 ForwardDiff = "0.9, 0.10"
@@ -105,7 +105,7 @@ StructArrays = "0.3,0.4,0.5,0.6"
 Tables = "1"
 TransformVariables = "0.8"
 VLBIImagePriors = "0.8"
-VLBILikelihoods = "^0.2.1"
+VLBILikelihoods = "^0.2.6"
 VLBISkyModels = "0.6"
 julia = "1.10"
 
