Try updating Optimization to 4

--- a/Project.toml
+++ b/Project.toml
@@ -88,7 +88,7 @@ LogDensityProblemsAD = "1"
 Makie = "0.21"
 NamedTupleTools = "0.13,0.14"
 NestedSamplers = "0.8"
-Optimization = "3"
+Optimization = "3, 4"
 PaddedViews = "0.5"
 ParameterHandling = "0.4, 0.5"
 Pigeons = "0.3, 0.4"
