Try to get docs to compile

--- a/Project.toml
+++ b/Project.toml
@@ -49,7 +49,6 @@ VLBISkyModels = "d6343c73-7174-4e0f-bb64-562643efbeca"
 AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
 Dynesty = "eb527566-0f3e-4aab-bb5f-9d2e403dba70"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
-NestedSamplers = "41ceaf6f-1696-4a54-9b49-2e7a9ec3782e"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 Pigeons = "0eb8d820-af6a-4919-95ae-11206f830c31"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
@@ -58,7 +57,6 @@ Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 ComradeAdvancedHMCExt = "AdvancedHMC"
 ComradeDynestyExt = "Dynesty"
 ComradeEnzymeExt = "Enzyme"
-ComradeNestedExt = "NestedSamplers"
 ComradeOptimizationExt = "Optimization"
 ComradePigeonsExt = "Pigeons"
 ComradePyehtimExt = "Pyehtim"
@@ -87,7 +85,6 @@ LogDensityProblems = "2"
 LogDensityProblemsAD = "1"
 Makie = "0.21"
 NamedTupleTools = "0.13,0.14"
-NestedSamplers = "0.8"
 Optimization = "3, 4"
 PaddedViews = "0.5"
 ParameterHandling = "0.4, 0.5"
@@ -115,11 +112,10 @@ CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
 Dynesty = "eb527566-0f3e-4aab-bb5f-9d2e403dba70"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
-NestedSamplers = "41ceaf6f-1696-4a54-9b49-2e7a9ec3782e"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 Pigeons = "0eb8d820-af6a-4919-95ae-11206f830c31"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "AdvancedHMC", "Dynesty", "Enzyme", "Makie", "NestedSamplers", "Optimization", "Pigeons", "Pyehtim"]
+test = ["Test", "AdvancedHMC", "Dynesty", "Enzyme", "Makie", "Optimization", "Pigeons", "Pyehtim"]
