--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -13,12 +13,8 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 HypercubeTransform = "9ec9aee3-0fd3-44c2-8e61-a50acc66f3c8"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
-MCMCDiagnosticTools = "be115224-59cd-429b-ad48-344e309966f0"
-MCMCDiagnostics = "6e857e4b-079a-58c4-aeab-bc2670384359"
-NestedSamplers = "41ceaf6f-1696-4a54-9b49-2e7a9ec3782e"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
-OptimizationBBO = "3e6eede4-6085-4f62-9a71-46d9bc1eb92b"
-OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
+Pigeons = "0eb8d820-af6a-4919-95ae-11206f830c31"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PolarizedTypes = "d3c5d4cd-a8ee-40d6-aac7-e34df5a20044"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
