Update example deps

--- a/examples/advanced/HybridImaging/Project.toml
+++ b/examples/advanced/HybridImaging/Project.toml
@@ -16,9 +16,9 @@ VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
 [compat]
 CairoMakie = "0.12"
 Distributions = "0.25"
-OptimizationOptimJL = "0.3"
+Optimization = "4"
 Plots = "1"
 Pyehtim = "0.1"
 StableRNGs = "1"
-StatsBase = "0.33, 0.34"
+StatsBase = "0.34"
 VLBIImagePriors = "0.8"
