--- a/examples/beginner/GeometricModeling/Project.toml
+++ b/examples/beginner/GeometricModeling/Project.toml
@@ -15,8 +15,8 @@ VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
 [compat]
 CairoMakie = "0.12"
 Distributions = "0.25"
-OptimizationBBO = "0.2"
-Pigeons = "0.3, 0.4"
+Optimization = "4"
+Pigeons = "0.4"
 Plots = "1"
 Pyehtim = "0.1"
 StableRNGs = "1"
