--- a/Project.toml
+++ b/Project.toml
@@ -85,7 +85,7 @@ LogDensityProblems = "2"
 LogDensityProblemsAD = "1"
 Makie = "0.21"
 NamedTupleTools = "0.13,0.14"
-Optimization = "3, 4"
+Optimization = "4"
 PaddedViews = "0.5"
 ParameterHandling = "0.4, 0.5"
 Pigeons = "0.3, 0.4"
