CompatHelper: bump compat for EnzymeCore to 0.8, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -76,7 +76,7 @@ Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 Dynesty = "0.4"
 Enzyme = "0.12"
-EnzymeCore = "0.7"
+EnzymeCore = "0.7, 0.8"
 FillArrays = "1"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.4"
