CompatHelper: bump compat for Enzyme in [weakdeps] to 0.13, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -75,7 +75,7 @@ DimensionalData = "0.27, 0.28"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 Dynesty = "0.4"
-Enzyme = "0.12"
+Enzyme = "0.12, 0.13"
 EnzymeCore = "0.7"
 FillArrays = "1"
 ForwardDiff = "0.9, 0.10"
