--- a/Project.toml
+++ b/Project.toml
@@ -101,7 +101,7 @@ StatsBase = "0.33,0.34"
 StructArrays = "0.5,0.6"
 Tables = "1"
 TransformVariables = "0.8"
-VLBIImagePriors = "0.8"
+VLBIImagePriors = "0.8, 0.9"
 VLBILikelihoods = "^0.2.6"
 VLBISkyModels = "0.6"
 julia = "1.10"
