CompatHelper: bump compat for Enzyme in [weakdeps] to 0.13, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -74,7 +74,7 @@ DimensionalData = "0.27, 0.28, 0.29"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 Dynesty = "0.4"
-Enzyme = "=0.13.9"
+Enzyme = "=0.13.9, 0.13"
 EnzymeCore = "0.8"
 FillArrays = "1"
 ForwardDiff = "0.9, 0.10"
