CompatHelper: bump compat for StructArrays to 0.7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -96,7 +96,7 @@ SpecialFunctions = "0.10, 1, 2"
 StaticArraysCore = "1"
 Statistics = "1.8"
 StatsBase = "0.33,0.34"
-StructArrays = "0.5,0.6"
+StructArrays = "0.5,0.6, 0.7"
 Tables = "1"
 TransformVariables = "0.8"
 VLBIImagePriors = "0.9"
