adding last dependency for data plotting...

--- a/Project.toml
+++ b/Project.toml
@@ -85,6 +85,7 @@ HypercubeTransform = "0.4"
 IntervalSets = "0.6, 0.7"
 LogDensityProblems = "2"
 Makie = "0.21"
+Measurements = "2.11"
 NamedTupleTools = "0.13,0.14"
 Optimization = "4"
 PaddedViews = "0.5"
