CompatHelper: bump compat for Makie in [weakdeps] to 0.22, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -55,9 +55,9 @@ Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 
 [extensions]
 ComradeAdvancedHMCExt = "AdvancedHMC"
-ComradeMakieExt = "Makie"
 ComradeDynestyExt = "Dynesty"
 ComradeEnzymeExt = "Enzyme"
+ComradeMakieExt = "Makie"
 ComradeOptimizationExt = "Optimization"
 ComradePigeonsExt = "Pigeons"
 ComradePyehtimExt = "Pyehtim"
@@ -83,7 +83,7 @@ ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.4"
 IntervalSets = "0.6, 0.7"
 LogDensityProblems = "2"
-Makie = "0.21"
+Makie = "0.21, 0.22"
 NamedTupleTools = "0.13,0.14"
 Optimization = "4"
 PaddedViews = "0.5"
