Switch the plotting for all examples to Makie

--- a/examples/beginner/GeometricModeling/Project.toml
+++ b/examples/beginner/GeometricModeling/Project.toml
@@ -3,6 +3,7 @@ CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 DisplayAs = "0b91fe84-8a4c-11e9-3e1d-67c38462b6d6"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationBBO = "3e6eede4-6085-4f62-9a71-46d9bc1eb92b"
 Pigeons = "0eb8d820-af6a-4919-95ae-11206f830c31"
@@ -13,7 +14,7 @@ StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
 
 [compat]
-CairoMakie = "0.12"
+CairoMakie = "0.12, 0.13"
 Distributions = "0.25"
 Optimization = "4"
 Pigeons = "0.4"
