--- a/Project.toml
+++ b/Project.toml
@@ -93,6 +93,7 @@ Pigeons = "0.3, 0.4"
 PolarizedTypes = "0.1"
 PrettyTables = "1, 2"
 Pyehtim = "0.2"
+RecipesBase = "1"
 Reexport = "1"
 SpecialFunctions = "0.10, 1, 2"
 StaticArraysCore = "1"
