--- a/.gitignore
+++ b/.gitignore
@@ -15,14 +15,14 @@ docs/Manifest.toml
 examples/Manifest.toml
 LocalPreferences.toml
 examples/Manifest.toml
-lib/ComradeAHMC/Manifest.toml
-lib/ComradeAdaptMCMC/Manifest.toml
-lib/ComradeDynesty/Manifest.toml
-lib/ComradeNested/Manifest.toml
-lib/ComradeOptimization/Manifest.toml
-lib/ComradeOptimization/Manifest.toml
-lib/ComradeOptimization/Manifest.toml
-lib/ComradePigeons/Manifest.toml
+lib/StokedAHMC/Manifest.toml
+lib/StokedAdaptMCMC/Manifest.toml
+lib/StokedDynesty/Manifest.toml
+lib/StokedNested/Manifest.toml
+lib/StokedOptimization/Manifest.toml
+lib/StokedOptimization/Manifest.toml
+lib/StokedOptimization/Manifest.toml
+lib/StokedPigeons/Manifest.toml
 imaging_pol.md
 .CondaPkg
 test/CMAES.bson
