--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Comrade"
+name = "Stoked"
 uuid = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
 authors = ["Paul Tiede <ptiede91@gmail.com>"]
 version = "0.11.7"
@@ -9,7 +9,7 @@ Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
 ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
 AstroTime = "c61b5328-d09d-5e37-a9a8-0eb41c39009c"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
-ComradeBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
+StokedBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DensityInterface = "b429d917-457f-4dbc-8f4c-0cc954292b1d"
 DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
@@ -55,13 +55,13 @@ Pigeons = "0eb8d820-af6a-4919-95ae-11206f830c31"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 
 [extensions]
-ComradeAdvancedHMCExt = "AdvancedHMC"
-ComradeDynestyExt = "Dynesty"
-ComradeEnzymeExt = "Enzyme"
-ComradeMakieExt = "Makie"
-ComradeOptimizationExt = "Optimization"
-ComradePigeonsExt = "Pigeons"
-ComradePyehtimExt = "Pyehtim"
+StokedAdvancedHMCExt = "AdvancedHMC"
+StokedDynestyExt = "Dynesty"
+StokedEnzymeExt = "Enzyme"
+StokedMakieExt = "Makie"
+StokedOptimizationExt = "Optimization"
+StokedPigeonsExt = "Pigeons"
+StokedPyehtimExt = "Pyehtim"
 
 [compat]
 AbstractMCMC = "3, 4, 5"
@@ -70,7 +70,7 @@ AdvancedHMC = "0.6"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
 ChainRulesCore = "1"
-ComradeBase = "0.8"
+StokedBase = "0.8"
 DelimitedFiles = "1"
 DensityInterface = "0.4"
 DimensionalData = "0.27, 0.28, 0.29"
