--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -2,8 +2,8 @@
 AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
 AdvancedHMC = "0bf59076-c3b1-5ca4-86bd-e02cd72cde3d"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
-Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
-ComradeBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
+Stoked = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
+StokedBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterVitepress = "4710194d-e776-4893-9690-8d956a29c365"
