--- a/Project.toml
+++ b/Project.toml
@@ -70,7 +70,7 @@ AdvancedHMC = "0.6"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
 ChainRulesCore = "1"
-ComradeBase = "0.8"
+ComradeBase = "0.8, 0.9"
 DelimitedFiles = "1"
 DensityInterface = "0.4"
 DimensionalData = "0.27, 0.28, 0.29"
