--- a/Project.toml
+++ b/Project.toml
@@ -70,10 +70,10 @@ AdvancedHMC = "0.6"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
 ChainRulesCore = "1"
-ComradeBase = "0.8"
+ComradeBase = "0.9"
 DelimitedFiles = "1"
 DensityInterface = "0.4"
-DimensionalData = "0.27, 0.28, 0.29"
+DimensionalData = "0.29"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 Dynesty = "0.4"
