--- a/Project.toml
+++ b/Project.toml
@@ -79,7 +79,7 @@ Dynesty = "0.4"
 Enzyme = "0.13"
 EnzymeCore = "0.8"
 FillArrays = "1"
-HypercubeTransform = "0.4"
+HypercubeTransform = "^0.4.4"
 IntervalSets = "0.6, 0.7"
 LogDensityProblems = "2"
 Makie = "0.22"
