--- a/Project.toml
+++ b/Project.toml
@@ -82,7 +82,7 @@ FillArrays = "1"
 HypercubeTransform = "^0.4.11"
 IntervalSets = "0.6, 0.7"
 LogDensityProblems = "2"
-Makie = "0.22"
+Makie = "0.24"
 Measurements = "2"
 NamedTupleTools = "0.13,0.14"
 Optimization = "4"
@@ -103,7 +103,7 @@ Tables = "1"
 TransformVariables = "0.8"
 VLBIImagePriors = "0.10"
 VLBILikelihoods = "^0.2.6"
-VLBISkyModels = "0.6"
+VLBISkyModels = "^0.6.15"
 julia = "1.10"
 
 [extras]
