--- a/examples/beginner/GeometricModeling/Project.toml
+++ b/examples/beginner/GeometricModeling/Project.toml
@@ -14,7 +14,7 @@ StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
 
 [compat]
-CairoMakie = "0.12, 0.13"
+CairoMakie = "0.15"
 Distributions = "0.25"
 Optimization = "4"
 Pigeons = "0.4"
