CompatHelper: bump compat for Optimization in [weakdeps] to 5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -85,7 +85,7 @@ LogDensityProblems = "2"
 Makie = "0.24"
 Measurements = "2"
 NamedTupleTools = "0.13,0.14"
-Optimization = "4"
+Optimization = "4, 5"
 PaddedViews = "0.5"
 ParameterHandling = "0.4, 0.5"
 Pigeons = "0.4, 0.5"
