--- a/examples/advanced/Hibi/Project.toml
+++ b/examples/advanced/Hibi/Project.toml
@@ -6,6 +6,7 @@ DisplayAs = "0b91fe84-8a4c-11e9-3e1d-67c38462b6d6"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
+OptimizationLBFGSB = "22f7324a-a79d-40f2-bebe-3af60c77bd15"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
@@ -14,7 +15,7 @@ VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
 
 [compat]
 CairoMakie = "0.15"
-Optimization = "4"
+Optimization = "5"
 Pyehtim = "0.2"
 StableRNGs = "1"
 StatsBase = "0.34"
