--- a/examples/advanced/FitPS/Project.toml
+++ b/examples/advanced/FitPS/Project.toml
@@ -9,7 +9,9 @@ FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 LogDensityProblems = "6fdf6af0-433a-55f7-b3ed-c6c6e0b8df7c"
 NonuniformFFTs = "cd96f58b-6017-4a02-bb9e-f4d81626177f"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
-OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
+OptimizationLBFGSB = "22f7324a-a79d-40f2-bebe-3af60c77bd15"
+OptimizationOptimisers = "42dfb2eb-d2b4-4451-abcd-913932933ac1"
+OptimizationSophia = "892fee11-dca1-40d6-b698-84ba0d87399a"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
@@ -21,7 +23,7 @@ VLBILikelihoods = "90db92cd-0007-4c0a-8e51-dbf0782ce592"
 CairoMakie = "0.15"
 DisplayAs = "0.1"
 Distributions = "0.25"
-Optimization = "4"
+Optimization = "5"
 Pkg = "1"
 Pyehtim = "0.2"
 StableRNGs = "1"
