--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,28 @@
 name: CI
+
 on:
-  pull_request:
-    branches:
-      - main
   push:
     branches:
       - main
-    tags: '*'
+  pull_request:
+
+concurrency:
+  # Skip intermediate builds: always.
+  # Cancel intermediate builds: only if it is a pull request build.
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
+
 jobs:
   test:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
+    # needed to allow julia-actions/cache to delete old caches that it has created
+    permissions:
+      actions: write
+      contents: read
     runs-on: ${{ matrix.os }}
-    continue-on-error: ${{ matrix.group == 'Downstream'}}
+    continue-on-error: ${{ matrix.version == 'pre' || matrix.version == 'min' }}
     strategy:
       fail-fast: false
       matrix:
-        group:
-          - Core 
         version:
           - 'lts'
           - '1'
@@ -26,8 +32,6 @@ jobs:
           - x64
         python-version:
           - '3.10'
-        
-
     steps:
       - name: Install Libs
         run: |
@@ -45,25 +49,12 @@ jobs:
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
-      # - uses: julia-actions/cache@v2
+      - uses: julia-actions/cache@v2
       - uses: julia-actions/julia-buildpkg@v1      
-      - uses: actions/cache@v4
-        env:
-          cache-name: cache-artifacts
-        with:
-          path: ~/.julia/artifacts
-          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-test-${{ env.cache-name }}-
-            ${{ runner.os }}-test-
-            ${{ runner.os }}-
-
       - uses: julia-actions/julia-runtest@v1
         env:
           GROUP: ${{ matrix.group }}
       - uses: julia-actions/julia-processcoverage@v1
-        with:
-          directories: src
       - uses: codecov/codecov-action@v5
         with:
               token: ${{ secrets.CODECOV_TOKEN }}
