--- a/Project.toml
+++ b/Project.toml
@@ -100,7 +100,7 @@ Statistics = "1.8"
 StatsBase = "0.33,0.34"
 StructArrays = "0.5,0.6, 0.7"
 Tables = "1"
-TransformVariables = "0.8"
+TransformVariables = "0.8 - 0.8.18"
 VLBIImagePriors = "0.10"
 VLBILikelihoods = "^0.2.6"
 VLBISkyModels = "^0.6.15"
