Update to newer version of TransformVariables.

--- a/Project.toml
+++ b/Project.toml
@@ -84,7 +84,7 @@ IntervalSets = "0.6, 0.7 - 0.7.11, ^0.7.13"
 LogDensityProblems = "2"
 Makie = "0.24"
 Measurements = "2"
-NamedTupleTools = "0.13,0.14"
+NamedTupleTools = "0.13, 0.14"
 Optimization = "5"
 PaddedViews = "0.5"
 ParameterHandling = "0.4, 0.5"
@@ -100,7 +100,7 @@ Statistics = "1.8"
 StatsBase = "0.33,0.34"
 StructArrays = "0.5,0.6, 0.7"
 Tables = "1"
-TransformVariables = "0.8 - 0.8.17"
+TransformVariables = "^0.8.19"
 VLBIImagePriors = "0.10"
 VLBILikelihoods = "^0.2.6"
 VLBISkyModels = "^0.6.15"
