Relax Enzyme bounds

--- a/Project.toml
+++ b/Project.toml
@@ -76,7 +76,7 @@ DimensionalData = "0.29 - 0.29.24, ^0.29.26"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 Dynesty = "0.4"
-Enzyme = "0.13 - 0.13.104, 0.13.109 - 0.13.111"
+Enzyme = "0.13 - 0.13.104, ^0.13.109"
 EnzymeCore = "0.8"
 FillArrays = "1"
 HypercubeTransform = "^0.4.11"
